--- a/icons/main.ui
+++ b/icons/main.ui
@@ -394,7 +394,7 @@ border-radius: 25;</string>
                     <property name="spacing">
                      <number>6</number>
                     </property>
-                    <item row="1" column="0">
+                    <item row="2" column="0">
                      <widget class="QFrame" name="frame_18">
                       <property name="styleSheet">
                        <string notr="true">background-color: rgb(24, 24, 24);</string>
@@ -416,7 +416,7 @@ border-radius: 25;</string>
 font: 18pt &quot;Calibri&quot;;</string>
                          </property>
                          <property name="text">
-                          <string>Total Chargers</string>
+                          <string>Occupied Chargers</string>
                          </property>
                         </widget>
                        </item>
@@ -426,7 +426,7 @@ font: 18pt &quot;Calibri&quot;;</string>
                           <number>2</number>
                          </property>
                          <property name="intValue" stdset="0">
-                          <number>40</number>
+                          <number>26</number>
                          </property>
                         </widget>
                        </item>
@@ -464,7 +464,7 @@ font: 18pt &quot;Calibri&quot;;</string>
 font: 18pt &quot;Calibri&quot;;</string>
                          </property>
                          <property name="text">
-                          <string>Total Stations</string>
+                          <string>Total Chargers</string>
                          </property>
                          <property name="wordWrap">
                           <bool>true</bool>
@@ -477,7 +477,46 @@ font: 18pt &quot;Calibri&quot;;</string>
                           <number>2</number>
                          </property>
                          <property name="intValue" stdset="0">
-                          <number>10</number>
+                          <number>40</number>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </widget>
+                    </item>
+                    <item row="1" column="0">
+                     <widget class="QFrame" name="frame_109">
+                      <property name="styleSheet">
+                       <string notr="true">background-color: rgb(24, 24, 24);</string>
+                      </property>
+                      <property name="frameShape">
+                       <enum>QFrame::StyledPanel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Raised</enum>
+                      </property>
+                      <layout class="QHBoxLayout" name="horizontalLayout_66">
+                       <property name="leftMargin">
+                        <number>20</number>
+                       </property>
+                       <item>
+                        <widget class="QLabel" name="label_118">
+                         <property name="styleSheet">
+                          <string notr="true">color: rgb(255, 255, 255);
+font: 18pt &quot;Calibri&quot;;</string>
+                         </property>
+                         <property name="text">
+                          <string>Available Chargers</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLCDNumber" name="lcdNumber_3">
+                         <property name="digitCount">
+                          <number>2</number>
+                         </property>
+                         <property name="intValue" stdset="0">
+                          <number>14</number>
                          </property>
                         </widget>
                        </item>
@@ -567,17 +606,7 @@ border-color: transparent;
 font: 18pt &quot;Calibri&quot;;</string>
                          </property>
                          <property name="text">
-                          <string>Occupied Chargers</string>
-                         </property>
-                        </widget>
-                       </item>
-                       <item>
-                        <widget class="QLCDNumber" name="lcdNumber_3">
-                         <property name="digitCount">
-                          <number>2</number>
-                         </property>
-                         <property name="intValue" stdset="0">
-                          <number>26</number>
+                          <string>Percentage of Chargers in use </string>
                          </property>
                         </widget>
                        </item>
@@ -3228,6 +3257,9 @@ font: 12pt &quot;Calibri&quot;;</string>
              <layout class="QGridLayout" name="gridLayout_3">
               <item row="0" column="0">
                <widget class="QFrame" name="frame_7">
+                <property name="styleSheet">
+                 <string notr="true">background-color: rgb(34, 34, 34);</string>
+                </property>
                 <property name="frameShape">
                  <enum>QFrame::StyledPanel</enum>
                 </property>
@@ -3238,7 +3270,8 @@ font: 12pt &quot;Calibri&quot;;</string>
                  <item row="0" column="0">
                   <widget class="QTabWidget" name="tabWidget">
                    <property name="styleSheet">
-                    <string notr="true">background-color: rgb(24, 24, 24);</string>
+                    <string notr="true">background-color: rgb(24, 24, 24);
+border: none;</string>
                    </property>
                    <property name="tabShape">
                     <enum>QTabWidget::Rounded</enum>
@@ -3697,6 +3730,12 @@ font: 75 36pt &quot;MS Shell Dlg 2&quot;;</string>
                          <width>591</width>
                          <height>400</height>
                         </rect>
+                       </property>
+                       <property name="sizePolicy">
+                        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                         <horstretch>0</horstretch>
+                         <verstretch>0</verstretch>
+                        </sizepolicy>
                        </property>
                        <property name="styleSheet">
                         <string notr="true">color: rgb(255, 255, 255);
